k8s-specifications/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service  
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: 2048-game
