k8s-specifications/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: "game.olaolat.com"
spec:
  tls:
  - hosts:
    - game.olaolat.com
    secretName: secret-tls
  ingressClassName: nginx
  rules:
  - host: game.olaolat.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 80
